[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vn-lunar-calendar"
version = "0.1.0"
description = "Vietnamese Lunar Calendar - Solar/Lunar conversion, Can Chi, Solar Terms, Lucky Hours"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "LunarCalendar Team"},
]
keywords = [
    "lunar-calendar",
    "vietnamese",
    "am-lich",
    "lich-am",
    "canchi",
    "can-chi",
    "solar-terms",
    "tiet-khi",
    "calendar-converter",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/your-org/vn-lunar-calendar"
Documentation = "https://github.com/your-org/vn-lunar-calendar/docs"
Repository = "https://github.com/your-org/vn-lunar-calendar"
Issues = "https://github.com/your-org/vn-lunar-calendar/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vn_lunar_calendar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"
